overflow cart fix

--- a/src/app/Styles/Cart.css
+++ b/src/app/Styles/Cart.css
@@ -46,6 +46,8 @@
   z-index: 1;
   box-shadow: 0px 20px 40px #555;
   border-radius: 10px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #itemList {
